--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AIP Food List</string>
+    <string name="main_activity_title">AIP Food List</string>
+    <string name="more_info_icon_content_description">More info icon</string>
 </resources>
